--- a/style.css
+++ b/style.css
@@ -10,7 +10,11 @@ div {
     margin-bottom: 2px;
 }
 
-div label:first-child {
+div label:first-child, span:first-child {
     display: inline-block;
     width: 200px;
+}
+
+.half-width {
+    width: 75px;
 }
